--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth !important;
   }
+
+
 
 
 #header__img {
@@ -19,3 +22,4 @@ height: 600px;
 
     }
 }
+
